# db_performance_analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb
sql/: baseline_query.sql  load_data.sql  schema.sql  schema_with_indices.sql
